Updated Honolulu to Oakland

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <%= display_meta_tags :site => "Honolulu Answers" %>
+  <%= display_meta_tags :site => "Oakland Answers" %>
   <meta name="robots" content="index,nofollow" />
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale =1,maximum-scale=1,user-scalable=no" />
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="row">
         <div class="logo span4">
-          <a href="/" class="hnl-logo">Honolulu Answers</a>
+          <a href="/" class="hnl-logo">Oakland Answers</a>
           <span class="bubble"><img src="/assets/beta.png" class="beta" alt="beta"></span>
         </div>
         <ul class="nav-top span5">
@@ -62,8 +62,8 @@
   <div class="container">
     <ul class="footer-links">
       <li><%=link_to("About", about_path)%></li>
-      <li><a href="mailto:hnlanswerseditors@honolulu.gov">Contact</a></li>
-      <li><a href="https://github.com/honolulu/honolulu_answers">Contribute</a></li>
+      <li><a href="mailto:feedback@oaklandnet.com">Contact</a></li>
+      <li><a href="https://github.com/city-of-oakland/oakland_answers">Contribute</a></li>
       <li><%= link_to("Sign In", admin_dashboard_path) %></li>
     </ul>
     <div class="cfa-logos">
@@ -72,7 +72,7 @@
       </a>
       <a href="http://codeforamerica.org/"><img src="/assets/cfa_logo_footer.png" class="right" alt="Code for America" /></a>
       <span class="plus">&#43;</span>
-      <a href="http://honolulu.gov"><img src="/assets/hnl_gov.png" class="right" alt="City and County of Honolulu" /></a>
+      <a href="http://honolulu.gov"><img src="/assets/hnl_gov.png" class="right" alt="City of Oakland" /></a>
     </div>
   </div>
 </div><!-- /footer -->
