--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     <div id="welcome-line-l"></div>
     <div id="welcome-line-r"></div>
     <h3 class="welcome">Welcome To</h3>
-    <h1 class="home-modal">Honolulu Answers</h1>
+    <h1 class="home-modal">Oakland Answers</h1>
     <p class="call">
       Find answers to your questions about Honolulu city services.
     </p>
