added oakland to homepage and footer, added images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,16 +63,14 @@
     <ul class="footer-links">
       <li><%=link_to("About", about_path)%></li>
       <li><a href="mailto:feedback@oaklandnet.com">Contact</a></li>
-      <li><a href="https://github.com/city-of-oakland/oakland_answers">Contribute</a></li>
+      <li><a href="https://github.com/city-of-oakland/oakland_answers">Code</a></li>
       <li><%= link_to("Sign In", admin_dashboard_path) %></li>
     </ul>
     <div class="cfa-logos">
-      <a href="http://ixda.org/">
-        <img src="/assets/HNLAnswers_2013InteractionAwards_WinnerConnecting.png" alt="Interaction Awards Winner for facilitating communication between people and communities." />
-      </a>
+      
       <a href="http://codeforamerica.org/"><img src="/assets/cfa_logo_footer.png" class="right" alt="Code for America" /></a>
       <span class="plus">&#43;</span>
-      <a href="http://honolulu.gov"><img src="/assets/hnl_gov.png" class="right" alt="City of Oakland" /></a>
+      <a href="http://oaklandnet.com"><img src="/assets/hnl_gov.png" class="right" alt="City of Oakland" /></a>
     </div>
   </div>
 </div><!-- /footer -->
