added oakland updated search terms

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
     <h3 class="welcome">Welcome To</h3>
     <h1 class="home-modal">Oakland Answers</h1>
     <p class="call">
-      Find answers to your questions about Honolulu city services.
+      Find answers to your questions about Oakland city services.
     </p>
 
     <div class="ribbon-front">
@@ -14,7 +14,7 @@
       <div class="triangle-r"></div>
       <div class="ribbon-wrapper">
         <form id="search" action="search" name="search" method="get">
-          <input type="text" name="q" id="query" title='query' placeholder="Try driver license, jobs, or registration...">
+          <input type="text" name="q" id="query" title='query' placeholder="Try parking, jobs, or permits...">
           <input class="btn-search" id="home-search" type="submit" value="SEARCH" title="Search">
         </form>
       </div>
