--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
     <h3 class="welcome">Welcome To</h3>
     <h1 class="home-modal">Oakland Answers</h1>
     <p class="call">
-      Find answers to your questions about Oakland city services.
+      Find answers to your questions about City of Oakland services.
     </p>
 
     <div class="ribbon-front">
