--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-<% set_meta_tags :description => "Questions related to #{@category.name}.", :canonical => "http://answers.honolulu.gov#{request.fullpath}" %>
+<% set_meta_tags :description => "Questions related to #{@category.name}.", :canonical => "http://oaklandanswers.herokuapp.com#{request.fullpath}" %>
 <div class="page-container">
   <div class="breadcrumbs">
     <%= link_to( "Home", root_url) %>
