--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
   <div class="container">
     <ul class="footer-links">
       <li><%=link_to("About", about_path)%></li>
-      <li><a href="mailto:feedback@oaklandnet.com">Contact</a></li>
+      <li><a href="mailto:nneditch@oaklandnet.com">Contact</a></li>
       <li><a href="https://github.com/city-of-oakland/oakland_answers">Code</a></li>
       <li><%= link_to("Sign In", admin_dashboard_path) %></li>
     </ul>
@@ -70,7 +70,7 @@
       
       <a href="http://codeforamerica.org/"><img src="/assets/cfa_logo_footer.png" class="right" alt="Code for America" /></a>
       <span class="plus">&#43;</span>
-      <a href="http://oaklandnet.com"><img src="/assets/hnl_gov.png" class="right" alt="City of Oakland" /></a>
+      <a href="http://www2.oaklandnet.com"><img src="/assets/OaklandCityTree.png" class="right" alt="City of Oakland" /></a>
     </div>
   </div>
 </div><!-- /footer -->
