--- a/app/assets/stylesheets/all/style.css
+++ b/app/assets/stylesheets/all/style.css
@@ -370,7 +370,7 @@ div.search-ribbon {}
 }
 
 .ribbon-front .triangle-l {
-  border-color: transparent #4a7d95 transparent transparent;
+  border-color: transparent #3f6529 transparent transparent;
   border-style:solid;
   border-width:34px;
   height:0;
@@ -382,7 +382,7 @@ div.search-ribbon {}
 }
 
 .ribbon-front .triangle-r {
-  border-color: transparent transparent transparent #4a7d95;
+  border-color: transparent transparent transparent #3f6529;
   border-style:solid;
   border-width:34px;
   height:0;
