--- a/app/assets/stylesheets/all/style.css
+++ b/app/assets/stylesheets/all/style.css
@@ -132,7 +132,7 @@ p a,h1 a,h2 a,h3 a,h4 a,li a{
 
 p a:hover{
   color: rgb(0,136,204);
-  border-bottom: 1px solid #ffde4d;
+  border-bottom: 1px solid #3a9d2f;
 }
 
 .breadcrumbs a{
@@ -145,15 +145,15 @@ table a{
 }
 
 a { 
-  border-bottom: 1px solid #ffde4d;
+  border-bottom: 1px solid #3a9d2f;
 }
 
 .category p a{ 
-  border-bottom: 1px solid #ffde4d;
+  border-bottom: 1px solid #3a9d2f;
 }
 
 a:hover{
-  border-bottom: 1px solid #ffde4d;
+  border-bottom: 1px solid #3a9d2f;
   text-decoration: none;
   color: rgb(0,136,204);
 }
@@ -163,14 +163,14 @@ a.hnl-logo {
   color: #FFFFFF;
   font-family: Oswald, "News Cycle", Helvetica, Tahoma, Arial, sans-serif;
   letter-spacing:0.08em;
-  border-bottom: 7px solid #ffde4d;
+  border-bottom: 7px solid #3a9d2f;
   text-decoration: none;
   text-transform: uppercase;
   line-height: 70%;
 }
 
 a.hnl-logo:hover {
-  border-bottom: 10px solid #ffde4d;
+  border-bottom: 10px solid #3a9d2f;
 }
 
 .sidebar-content  {
@@ -182,7 +182,7 @@ a.hnl-logo:hover {
 /* ---------- */
 div.navbar-top {
   width: 100%;
-  background-color: #070707;
+  background-color: #454d60;
   height: 80px;
 }
 div.logo {
@@ -211,7 +211,7 @@ ul.nav-top {
 }
 
 .nav-top li a:hover {
-  border-bottom: 1px solid #ffde4d;
+  border-bottom: 1px solid #3a9d2f;
 }
 
 .nav-top li a:active, .nav-top li a:focus{
@@ -226,7 +226,7 @@ div.header-search {
 }
 .header-search input:focus#query {
   background-color: #FFF;
-  border: 1px solid #FFDE4D;
+  border: 1px solid #3a9d2f;
 }
 .header-search input#query {
   height: 30%;
@@ -286,7 +286,7 @@ div#welcome-line-r {
 }
  
 div.pop-heading {
-  border-bottom: 10px solid #ffde4d;
+  border-bottom: 10px solid #3a9d2f;
   margin: 0 0 20px 0;
 }
 
@@ -363,14 +363,14 @@ div.search-ribbon {}
   position: relative;
   padding: 25px 70px;
   margin: 0 -78px 50px -78px;
-  background-color: rgb(69, 128, 180);
+  background-color: rgb(69,77,96);
   color: white;
   text-shadow: 0 1px 1px #155B88;
   box-shadow: 2px 1px 6px -3px rgba(0, 0, 0, 0.5), -2px 0px 5px -3px rgba(0, 0, 0, 0.5), 0px 5px 10px -4px rgba(0, 0, 0, 0.3);
 }
 
 .ribbon-front .triangle-l {
-  border-color: transparent #3f6529 transparent transparent;
+  border-color: transparent #2a3040 transparent transparent;
   border-style:solid;
   border-width:34px;
   height:0;
@@ -382,7 +382,7 @@ div.search-ribbon {}
 }
 
 .ribbon-front .triangle-r {
-  border-color: transparent transparent transparent #3f6529;
+  border-color: transparent transparent transparent #2a3040;
   border-style:solid;
   border-width:34px;
   height:0;
@@ -401,7 +401,7 @@ input#query {
   width: 70%;
   height: 40px;
   padding: 3px 5px;
-  border: 1px solid #3198DA;
+  border: 1px solid #454d60;
   -webkit-border-radius: 3px 0 0 3px;
   border-radius: 3px 0 0 3px;
   background: white;
@@ -419,7 +419,7 @@ input#query {
 }
 input:focus#query {
   outline: none; 
-  box-shadow: 0px 0px 5px #ffde4d;
+  box-shadow: 0px 0px 5px #3a9d2f;
   border: 1px solid #303030;
 }
 
@@ -444,7 +444,7 @@ input:hover#query { }
 /* Search Button */
 /* ------------- */
 .btn-search {
-  background-color:#F38200;
+  background-color:#3a9d2f;
   -moz-border-radius:3px;
   -webkit-border-radius:3px;
   border-radius:3px;
@@ -480,7 +480,7 @@ input:hover#query { }
 /* ------ */
 .footer {
   width: 100%;
-  background-color: #070707;
+  background-color: #454d60;
   height: 50px;
   padding-top:15px;
   padding-bottom:15px;
@@ -506,7 +506,7 @@ ul.footer-links > li > a {
 }
 
 ul.footer-links li a:hover {
-  border-bottom: 1px solid #ffde4d;
+  border-bottom: 1px solid #3a9d2f;
 }
 
 .cfa-logos {
@@ -552,13 +552,13 @@ ul.footer-links li a:hover {
   margin-bottom: 20px;
 }
 .main-content > .header { /* TODO */
-  /* border-bottom: 6px solid #ffde4d; */
+  /* border-bottom: 6px solid #3a9d2f; */
   padding-bottom: 15px;
   margin-bottom: 10px;
 }
 .header > h1 {
   padding-bottom: 10px;
-  border-bottom: 6px solid #ffde4d;
+  border-bottom: 6px solid #3a9d2f;
 }
 
 .sidebar {
@@ -595,7 +595,7 @@ li.category-article{
 
 li.article-listing a:hover{
   color: rgb(0,136,204);
-  border-bottom: 1px solid #FFDE4D;
+  border-bottom: 1px solid #3a9d2f;
 }
 
 li.article-listing a{
@@ -689,7 +689,7 @@ td {
 }
 .sidebar a {
   color: #303030;
-  border-bottom: 1px solid #FFDE4D;
+  border-bottom: 1px solid #3a9d2f;
 }
 .sidebar a:hover{
   color: #4580B4;
