--- a/app/assets/stylesheets/all/style.css
+++ b/app/assets/stylesheets/all/style.css
@@ -105,7 +105,7 @@ h4.side-head {
   font-family: Oswald, "News Cycle", Helvetica, Tahoma, Arial, sans-serif;
   font-size: 18px;
   color: #FFF;
-  background-color:#4580b4;
+  background-color:#b4ac45;
   padding: 10px 15px;
   margin: 0;
   letter-spacing: 0.075em;
