--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -9,11 +9,11 @@
 		<div class="row">
 			<div class="span9 main">
 				<div class="main-content">
-					<p>Honolulu Answers is an experimental new approach designed to make it easier for people to find City information and services quickly.</p>
+					<p>Oakland Answers is an new approach to a City website, designed to make it easier for people to find City information and services quickly.</p>
 					<div class="title-spacing">
 					<h1>What It Is</h1>
-					<p>Honolulu Answers is a citizen-focused website that is question-driven, with clean, easy-to-navigate design. You can ask a question or type in keywords using plain language. You'll receive simple, friendly, concise, easy-to-understand responses, as though they're coming from a neighbor.</p>
-					<p>Watch this <a href="https://vimeo.com/43632898#" target="_blank" class="highlight">short video</a> to learn more about Honolulu Answers.</p>
+					<p>Oakland Answers is a citizen-focused website that is question-driven, with clean, easy-to-navigate design. You can ask a question or type in keywords using plain language. You'll receive simple, friendly, concise, easy-to-understand responses, as though they're coming from a neighbor.</p>
+					<p>Oakland Answers is based on the application built for Honolulu by 2012 Code for America fellows. Watch this <a href="https://vimeo.com/43632898#" target="_blank" class="highlight">short video</a> to learn more about Honolulu Answers.</p>
 					</div>
 					
 					<div class="title-spacing">
@@ -23,12 +23,12 @@
 						<ul class="about-list"><li>Quick Answers tell you the key things the majority of people need to know in order to answer the question.</li>
 							<li>Guides provide more detailed step-by-step information for more complex answers.</li>
 							<li>Web Services let you conduct transactions online to answer your questions.</li></ul></p> 
-							<p>Overall, Honolulu Answers is designed to be user-friendly, to make people's lives easier. It declutters the government website experience, and it solves a need people ordinarily have. Honolulu Answers is a first-of-its-kind for municipal government, but we were very inspired by <a href="http://gov.uk" target="_blank">Gov.uk</a> who are addressing a similar need for the UK government.</p>
+							<p>Overall, Oakland Answers is designed to be user-friendly, to make people's lives easier. It declutters the government website experience, and it solves a need people ordinarily have.</p>
 					</div>
 					
 					<div class="clearfix"></div>
 					<div class="title-spacing">
-							<h1>Our Team</h1>
+							<!--<h1>Our Team</h1>
 							<p>Honolulu Answers was created by <a href="http://codeforamerica.org/?cfa_project=honolulu-answers" target="_blank">Code for America</a> Fellows in partnership with the City and County of Honolulu:<br />
 								<a href="http://twitter.com/snajmi" target="_blank"><div class="shoutout"><%= image_tag "sheba.jpg", :class => "biopic" %><em>Sheba Najmi</em></div></a>
 								<a href="http://twitter.com/ezoehunt" target="_blank"><div class="shoutout"><%= image_tag "liz.jpg", :class => "biopic" %><em>Elizabeth Hunt</em></div></a>
@@ -55,8 +55,8 @@
 				</p>
 				</div>
 				<br />
-<!--				<div class="about-list"><p>Thanks to <a href="http://royalrealtyllc.com/">Royal Realty</a> for the background photo.</p></div>	
--->
+			<div class="about-list"><p>Thanks to <a href="http://royalrealtyllc.com/">Royal Realty</a> for the background photo.</p></div>	
+
 							<div class="clearfix"></div>
 							<div class="title-spacing">
 							<h1>We'd love to hear from you</h1>
@@ -72,7 +72,7 @@
 								<span class="comment"><a href="http://neighborhow.org/guides/host-a-writeathon-in-your-city" target="_blank">Host a  write-a-thon</a>.</span></li>
 								<li>Follow us on Twitter:&nbsp;
 								<span class="comment"><a href="https://twitter.com/HonoluluAnswers" target="_blank">@HonoluluAnswers</a>.</span></li>
-								</ul>
+								</ul>-->
 							</p>
 							</div>
 						</div>	
