--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,9 @@
           <li class="">
             <%= link_to("Quick Answers", "/articles/article-type/quick-answer") %>
           </li>
-          <li class="">
+          <!--<li class="">
             <%= link_to("Guides", "/articles/article-type/guide") %>
-          </li>
+          </li>-->
           <li class="">
             <%= link_to("Web Services", "/articles/article-type/web-service") %>
           </li>
