added style guide

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,8 @@
     <ul class="footer-links">
       <li><%=link_to("About", about_path)%></li>
       <li><a href="mailto:nneditch@oaklandnet.com">Contact</a></li>
-      <li><a href="https://github.com/city-of-oakland/oakland_answers">Code</a></li>
+      <li><a href="https://github.com/cityofoakland/oakland_answers">Code</a></li>
+      <li><a href="https://docs.google.com/document/d/1c5Q4I0iM7uP7IgJoPwBC7U_cXv8cuply2ynvrIpWQ6g/pub" target="_blank">Style Guide</a></li>
       <li><%= link_to("Sign In", admin_dashboard_path) %></li>
     </ul>
     <div class="cfa-logos">
