--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -1,5 +1,5 @@
 <% set_meta_tags :description => @article.preview,
-                 :canonical => "http://answers.honolulu.gov#{request.fullpath}",
+                 :canonical => "http://answers.oaklandnet.com#{request.fullpath}",
                  :title => [@article.category.name, @article.title] %>
 <div class="page-container article">
   <div class="breadcrumbs">
