--- a/app/views/articles/missing.html.erb
+++ b/app/views/articles/missing.html.erb
@@ -11,11 +11,11 @@
           Sorry, we can't find what you are looking for.
         </div>
         <div class="content-text">
-          <p>We are working to aggregate as much info from the City of Honolulu as we can.
+          <p>We are working to aggregate as much info from the City of Oakland as we can.
             Unfortunately it is an ongoing process and we don't yet have the article you are looking for.</p>
           <p>In the meantime we recommend:</p>
           <ul>
-            <li>Searching the <a href="http://www.honolulu.gov/government/">honolulu.gov</a> site for more information.</li>
+            <li>Searching the <%= link_offical_government %> site for more information.</li>
             <li>Checking back in a few weeks!</li>
           </ul>
         </div>
