--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,10 +15,10 @@
           <% unless @article.service_url.blank? %>
           <div class="onlineservice">
             <div class="servicebox">
-              <a href="<%= @article.service_url%>"><img src="/assets/getting_started_btn.png" alt="Get Started on the Honolulu.gov website." /></a>
+              <a href="<%= @article.service_url%>"><img src="/assets/getting_started_btn.png" alt="Get Started on the oaklandnet.com website." /></a>
             </div>
-            <h3 class="service">Honolulu.gov lets you do this online! </h3>
-            <p>This will take you directly to the online service on the honolulu.gov website.</p>
+            <h3 class="service">Oaklandnet.com lets you do this online! </h3>
+            <p>This will take you directly to the online service on the oaklandnet.com website.</p>
           </div>
           <% end %>
 
