--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,4 @@
-<% set_meta_tags :description => "Honolulu Answers is an experimental new approach designed to make it easier for people to find City information and services quickly." %>
+<% set_meta_tags :description =>  "#{offical_site_name} is an experimental new approach designed to make it easier for people to find City information and services quickly." %>
 <div class="page-container about-page">
 	<div class="breadcrumbs">
 		<%= link_to( "Home", root_url) %>
@@ -9,11 +9,11 @@
 		<div class="row">
 			<div class="span9 main">
 				<div class="main-content">
-					<p>Oakland Answers is an new approach to a City website, designed to make it easier for people to find City information and services quickly.</p>
+					<p><%= offical_site_name %> is an new approach to a City website, designed to make it easier for people to find City information and services quickly.</p>
 					<div class="title-spacing">
 					<h1>What It Is</h1>
-					<p>Oakland Answers is a citizen-focused website that is question-driven, with clean, easy-to-navigate design. You can ask a question or type in keywords using plain language. You'll receive simple, friendly, concise, easy-to-understand responses, as though they're coming from a neighbor.</p>
-					<p>Oakland Answers is based on the application built for Honolulu by 2012 Code for America fellows. Watch this <a href="https://vimeo.com/43632898#" target="_blank" class="highlight">short video</a> to learn more about Honolulu Answers.</p>
+					<p><%= offical_site_name %> is a citizen-focused website that is question-driven, with clean, easy-to-navigate design. You can ask a question or type in keywords using plain language. You'll receive simple, friendly, concise, easy-to-understand responses, as though they're coming from a neighbor.</p>
+					<p><%= offical_site_name %> is based on the application built for Honolulu by 2012 Code for America fellows. Watch this <a href="https://vimeo.com/43632898#" target="_blank" class="highlight">short video</a> to learn more about Honolulu Answers.</p>
 					</div>
 					
 					<div class="title-spacing">
@@ -23,20 +23,12 @@
 						<ul class="about-list"><li>Quick Answers tell you the key things the majority of people need to know in order to answer the question.</li>
 							<li>Guides provide more detailed step-by-step information for more complex answers.</li>
 							<li>Web Services let you conduct transactions online to answer your questions.</li></ul></p> 
-							<p>Overall, Oakland Answers is designed to be user-friendly, to make people's lives easier. It declutters the government website experience, and it solves a need people ordinarily have.</p>
+							<p>Overall, <%= offical_site_name %> is designed to be user-friendly, to make people's lives easier. It declutters the government website experience, and it solves a need people ordinarily have.</p>
 					</div>
 					
 					<div class="clearfix"></div>
 					<div class="title-spacing">
-							<!--<h1>Our Team</h1>
-							<p>Honolulu Answers was created by <a href="http://codeforamerica.org/?cfa_project=honolulu-answers" target="_blank">Code for America</a> Fellows in partnership with the City and County of Honolulu:<br />
-								<a href="http://twitter.com/snajmi" target="_blank"><div class="shoutout"><%= image_tag "sheba.jpg", :class => "biopic" %><em>Sheba Najmi</em></div></a>
-								<a href="http://twitter.com/ezoehunt" target="_blank"><div class="shoutout"><%= image_tag "liz.jpg", :class => "biopic" %><em>Elizabeth Hunt</em></div></a>
-								<a href="http://twitter.com/philip_hale" target="_blank"><div class="shoutout"><%= image_tag "phil.jpg", :class => "biopic" %><em>Philip Hale</em></div></a>
-								<a href="http://twitter.com/joeycdy" target="_blank"><div class="shoutout"><%= image_tag "joey.jpeg", :class => "biopic" %><em>Joey Cody</em></div></a>
-								<a href="http://twitter.com/maromba" target="_blank"><div class="shoutout"><%= image_tag "amir.jpeg", :class => "biopic" %><em>Amir Reavis-Bey</em></div></a>
-							</p>
-					</div>
+							<!--
 					<div class="clearfix"></div>
 					<div class="title-spacing">
 							<h1>With a little help from our friends...</h1>
