--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <%= display_meta_tags :site => "Oakland Answers" %>
+  <%= display_meta_tags :site => "#{offical_site_title}" %>
   <meta name="robots" content="index,nofollow" />
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale =1,maximum-scale=1,user-scalable=no" />
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="row">
         <div class="logo span4">
-          <a href="/" class="hnl-logo">Oakland Answers</a>
+          <a href="/" class="hnl-logo"><%= "#{offical_site_title}" %></a>
           <span class="bubble"><img src="/assets/beta.png" class="beta" alt="beta"></span>
         </div>
         <ul class="nav-top span5">
@@ -62,7 +62,7 @@
   <div class="container">
     <ul class="footer-links">
       <li><%=link_to("About", about_path)%></li>
-      <li><a href="mailto:nneditch@oaklandnet.com">Contact</a></li>
+      <li><a href=<%= "mailto:#{offical_contact_email}" %>>Contact</a></li>
       <li><a href="https://github.com/city-of-oakland/oakland_answers">Code</a></li>
       <li><%= link_to("Sign In", admin_dashboard_path) %></li>
     </ul>
