--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -1,4 +1,4 @@
-<%= set_meta_tags :description => @article.preview,
+<% set_meta_tags :description => @article.preview,
                  :canonical => link_to_offical_government_website(request.fullpath),
                  :title => [@article.category.name, @article.title] %>
 <div class="page-container article">
