--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<%= set_meta_tags :description => "Find answers to your questions about #{offical_city_name} City Services." %>
+<% set_meta_tags :description => "Find answers to your questions about #{offical_city_name} City Services." %>
 <div class="modal-container span8">
   <div class="main-modal">
     <div id="welcome-line-l"></div>
