--- a/app/views/articles/article_type.html.erb
+++ b/app/views/articles/article_type.html.erb
@@ -1,5 +1,5 @@
 <%= set_meta_tags :description => "All #{@article_type.split(/(?=[A-Z])/).join(' ')} questions.", 
-                 :canonical => link_to_offical_government_website(request.fullpath),
+                  :canonical => offical_government_long_url(request.fullpath)
                  :title => [@article.category.name, @article.title] %>
 
 <div class="page-container">
