--- a/app/views/articles/article_type.html.erb
+++ b/app/views/articles/article_type.html.erb
@@ -1,4 +1,4 @@
-<%= set_meta_tags :description => "All #{@article_type.split(/(?=[A-Z])/).join(' ')} questions.", 
+<% set_meta_tags :description => "All #{@article_type.split(/(?=[A-Z])/).join(' ')} questions.", 
                   :canonical => offical_government_long_url(request.fullpath)
                  :title => [@article.category.name, @article.title] %>
 
