background image is now a env variable

--- a/app/assets/stylesheets/all/style.css
+++ b/app/assets/stylesheets/all/style.css
@@ -45,7 +45,7 @@ a.gsfn-jqmClose {
 /* General Styles */
 /* -------------- */
 body {
- background:transparent url("/assets/background_image.jpg") repeat 0 100%;
+ /*background:transparent url("/assets/background_image.jpg") repeat 0 100%;*/
  background-attachment: fixed;
  font: 100%/1.5 "Helvetica Neue", Helvetica, Tahoma, Arial, sans-serif;
 }
