--- a/app/views/quick_answers/show.html.erb
+++ b/app/views/quick_answers/show.html.erb
@@ -1,6 +1,7 @@
 <% set_meta_tags :description => @article.preview,
-                  :canonical => offical_government_long_url(request.fullpath)
+                 :canonical => offical_government_long_url(request.fullpath),
                  :title => [@article.category.name, @article.title] %>
+
 <div class="page-container article">
   <div class="breadcrumbs">
     <%= link_to( "Home", root_url) %>
