--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
       <li><a href=<%= "mailto:#{offical_contact_email}" %>>Contact</a></li>
       <li><a href="https://github.com/city-of-oakland/oakland_answers">Code</a></li>
       <% if not offical_style_guide.nil? %>
-        <li><a href="#{offical_style_guide}" target="_blank">Style Guide</a></li>
+        <li><a href=<%= "#{offical_style_guide}" %> target="_blank">Style Guide</a></li>
       <% end %>
 
       <li><%= link_to("Sign In", admin_dashboard_path) %></li>
