--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,9 +5,9 @@ $(document).ready(function () {
   });
 });
 </script>
-<% set_meta_tags  :description => "Search results for #{@query}.", 
+<% set_meta_tags  :description => "Search results for #{@query}.",
                   :canonical => offical_government_long_url(request.fullpath),
-                  :title => "Search results for #{@query}."                  
+                  :title => "Search results for #{@query}."
 
                    %>
 
@@ -16,7 +16,7 @@ $(document).ready(function () {
     <div class="span9">
       <div class="main-content">
         <div class="header">
-          <h1>Search results for: &ldquo;<strong><%=@query%></strong>&rdquo;</h1>
+          <h1>Search results for: "<strong><%=@query%></strong>"</h1>
 
           <% if @query_corrected != @query %>
             <div class="suggestion">
@@ -29,8 +29,8 @@ $(document).ready(function () {
           <% end %>
 
           <br/>
-       
-          <% if @results.blank? or @results.count == 0 %>
+
+          <% if @results.empty? %>
             <p>Sorry, no results found for "<%=@query%>".  Please try rephrasing your search terms.</p>
           <% else %>
             <ul>
