--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
-<% set_meta_tags :description => "Find answers to your questions about #{offical_city_name} City Services." %>
+<% set_meta_tags :description => "Find answers to your questions about #{official_city_name} City Services." %>
 <div class="modal-container span8">
   <div class="main-modal">
     <div id="welcome-line-l"></div>
     <div id="welcome-line-r"></div>
     <h3 class="welcome">Welcome To</h3>
-    <h1 class="home-modal"><%= offical_site_title %></h1>
+    <h1 class="home-modal"><%= official_site_title %></h1>
     <p class="call">
-      <%= "Find answers to your questions about City of #{offical_city_name} services." %>
+      <%= "Find answers to your questions about City of #{official_city_name} services." %>
     </p>
 
     <div class="ribbon-front">
