Use white border to make fake box breaks

--- a/app/assets/stylesheets/active_admin_custom.css.scss
+++ b/app/assets/stylesheets/active_admin_custom.css.scss
@@ -5,6 +5,6 @@
 /* Define language areas */
 body.active_admin{
   li.top-break{
-      border-top: 3px solid gray; 
+      border-top: 20px solid #fff; 
     }
 }
