--- a/app/assets/stylesheets/active_admin_custom.css.scss
+++ b/app/assets/stylesheets/active_admin_custom.css.scss
@@ -6,12 +6,18 @@
 body.active_admin{
   li.top-break{
       border-top: 20px solid #fff; 
+      padding-top:2em;
     }
   form{
     fieldset{
       textarea{
         font-size:2em;
         width:50%;
+        &#quick_answer_preview,
+        &#quick_answer_preview_es,
+        &#quick_answer_preview_cn{
+          height:100px;
+        }
       }
       input[type=text]{
         font-size:2em;
