--- a/app/views/articles/article_type.html.erb
+++ b/app/views/articles/article_type.html.erb
@@ -34,10 +34,18 @@
                         <%= content_tag(:h2, link_to(article.title,article))%>
                         <p class="preview"><%= article.preview %></p>
                         <div class="other-langs">
-                          <%= content_tag(:h3, link_to(article.title_es,article))%>
-                          <p class="preview"><%= article.preview_es %></p>
-                          <%= content_tag(:h3, link_to(article.title_cn,article))%>
-                          <p class="preview"><%= article.preview_cn %></p>
+                          <% if(article.title_es) %>
+                          <div class="preview-es">
+                            <%= content_tag(:h3, link_to(article.title_es,article))%>
+                            <p class="preview"><%= article.preview_es %></p>
+                          </div>
+                          <% end %>
+                          <% if(article.title_cn) %>
+                          <div class="preview-cn">
+                            <%= content_tag(:h3, link_to(article.title_cn,article))%>
+                            <p class="preview"><%= article.preview_cn %></p>
+                          </div>
+                          <% end %>
                         </div>
                       </li>
           <% end %>
