--- a/app/views/articles/article_type.html.erb
+++ b/app/views/articles/article_type.html.erb
@@ -36,14 +36,14 @@
                         <div class="other-langs">
                           <% if(article.title_es) %>
                           <div class="preview-es">
-                            <img src="/assets/es.gif" />
+                            <img src="/assets/es.gif" title="This content is also in Spanish" />
                             <%= content_tag(:h3, link_to(article.title_es,article))%>
                             <p class="preview"><%= article.preview_es %></p>
                           </div>
                           <% end %>
                           <% if(article.title_cn) %>
                           <div class="preview-cn">
-                            <img src="/assets/cn.gif" />
+                            <img src="/assets/cn.gif" title="This content is also in Chinese" />
                             <%= content_tag(:h3, link_to(article.title_cn,article))%>
                             <p class="preview"><%= article.preview_cn %></p>
                           </div>
