Comment out nav items to content types we're not using

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,12 +38,12 @@
           <li class="">
             <%= link_to("Quick Answers", "/articles/article-type/quick-answer") %>
           </li>
-          <li class="">
+          <!--li class="">
             <%= link_to("Guides", "/articles/article-type/guide") %>
           </li>
           <li class="">
             <%= link_to("Web Services", "/articles/article-type/web-service") %>
-          </li>
+          </li-->
         </ul>
         <% if !current_page?('/')  %>
         <div class="header-search span3">
