--- a/app/views/shared/_articles_sidebar.html.erb
+++ b/app/views/shared/_articles_sidebar.html.erb
@@ -20,6 +20,21 @@
             </div>
           </div>
         <% end %>
+        <% if @article.keywords.count > 0 %>
+          <% if @article.related.any? %>
+            <div class="sidebar-unit">
+              <h4 class="side-head">RELATED TOPICS</h4>
+              <div class="sidebar-content">
+                <ul>
+                  <% @article.related.each do |art| %>
+                    <% next unless art.indexable? %>
+                    <%= content_tag(:li, link_to(art.title, article_path(art.id)) ) %>
+                  <% end -%>
+                </ul>
+              </div>
+            </div>
+          <% end -%>
+        <% end -%>
         <% unless @article.author_name.blank? %>
           <div class="sidebar-unit">
             <h4 class="side-head">AUTHORED BY</h4>
