--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
         </div>
         <ul class="nav-top span5">
           <li class="">
-            <%= link_to("Quick Answers", "/articles/article-type/quick-answer") %>
+            <%= link_to("Browse", "/articles/article-type/quick-answer") %>
           </li>
           <!--li class="">
             <%= link_to("Guides", "/articles/article-type/guide") %>
