Add multi-language titles to home. Remove weird inlinlining of category titles

--- a/app/assets/stylesheets/all/style.css
+++ b/app/assets/stylesheets/all/style.css
@@ -293,16 +293,11 @@ div.pop-heading {
 div.pop-categories p a {
 }
 
-div.pop-categories li:not(:last-child):after {
-  /*content: " - ";*/
-}
 
-div.pop-categories li+li:before {
-  content: '- ';
-}
+
 
 div.pop-categories li {
-  display: inline;
+  display: block;
   font-size: 120%;
 }
 
