Use slugged urls when linking to categories

--- a/app/views/home/_category.html.erb
+++ b/app/views/home/_category.html.erb
@@ -1,5 +1,5 @@
 <div class="category">
-  <span class="left"><%= link_to( category.name, category_path(category.id) ) %></span>
+  <span class="left"><%= link_to(category.name, category) %></span>
   <p class="right">
   <ul>
     <%= render :partial => 'home/article', :collection => category.articles.by_access_count.limit(3) %>
