--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -16,7 +16,7 @@
           <% @categories.each do |category| %>
           <% next unless article.published? %>
             <li class="category-listing">
-              <%= content_tag( :h2, link_to( category.name, category_path(category.id) ) ) %>
+              <%= content_tag( :h2, link_to(category.name, category) ) %>
               <p class="preview"><%= category.description %></p>
           </li>
           <% end -%>
