Remove redundant helper methods and use dotenv vars
There are a couple helper methods that are simply wrapping ENV vars
made by dotenv, this seems excessive. This commit uses only the ENV
vars created by dotenv. Fixes 18f/answer#56.

--- a/app/views/articles/article_type.html.erb
+++ b/app/views/articles/article_type.html.erb
@@ -1,5 +1,5 @@
-<% set_meta_tags  :description => "All #{@article_type.split(/(?=[A-Z])/).join(' ')} questions.", 
-                  :canonical => official_government_long_url(request.fullpath)
+<% set_meta_tags  description: "All #{@article_type.split(/(?=[A-Z])/).join(' ')} questions.", 
+                  canonical: ENV['OFFICIAL_GOVERNMENT_URL'] + request.fullpath
                   %>
 
 <div class="page-container">
