--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,4 @@
-<% set_meta_tags :description =>  "#{official_site_title} is an experimental new approach designed to make it easier for people to find City information and services quickly." %>
+<% set_meta_tags description: ENV["OFFICIAL_SITE_TITLE"] + " is an experimental new approach designed to make it easier for people to find City information and services quickly." %>
 <div class="page-container about-page">
 	<div class="breadcrumbs">
 		<%= link_to( "Home", root_url) %>
@@ -9,11 +9,11 @@
 		<div class="row">
 			<div class="span9 main">
 				<div class="main-content">
-					<p><%= official_site_title %> is an new approach to a City website, designed to make it easier for people to find City information and services quickly.</p>
+					<p><%= ENV["OFFICIAL_SITE_TITLE"] %> is an new approach to a City website, designed to make it easier for people to find City information and services quickly.</p>
 					<div class="title-spacing">
 					<h1>What It Is</h1>
-					<p><%= official_site_title %> is a citizen-focused website that is question-driven, with clean, easy-to-navigate design. You can ask a question or type in keywords using plain language. You'll receive simple, friendly, concise, easy-to-understand responses, as though they're coming from a neighbor.</p>
-					<p><%= official_site_title %> is based on the application built for Honolulu by 2012 Code for America fellows. Watch this <a href="https://vimeo.com/43632898#" target="_blank" class="highlight">short video</a> to learn more about Honolulu Answers.</p>
+					<p><%= ENV["OFFICIAL_SITE_TITLE"] %> is a citizen-focused website that is question-driven, with clean, easy-to-navigate design. You can ask a question or type in keywords using plain language. You'll receive simple, friendly, concise, easy-to-understand responses, as though they're coming from a neighbor.</p>
+					<p><%= ENV["OFFICIAL_SITE_TITLE"] %> is based on the application built for Honolulu by 2012 Code for America fellows. Watch this <a href="https://vimeo.com/43632898#" target="_blank" class="highlight">short video</a> to learn more about Honolulu Answers.</p>
 					</div>
 					
 					<div class="title-spacing">
@@ -23,7 +23,7 @@
 						<ul class="about-list"><li>Quick Answers tell you the key things the majority of people need to know in order to answer the question.</li>
 							<li>Guides provide more detailed step-by-step information for more complex answers.</li>
 							<li>Web Services let you conduct transactions online to answer your questions.</li></ul></p> 
-							<p>Overall, <%= official_site_title %> is designed to be user-friendly, to make people's lives easier. It declutters the government website experience, and it solves a need people ordinarily have.</p-->
+							<p>Overall, <%= ENV["OFFICIAL_SITE_TITLE"] %> is designed to be user-friendly, to make people's lives easier. It declutters the government website experience, and it solves a need people ordinarily have.</p-->
 					</div>
 					
 					<div class="clearfix"></div>
