--- a/app/views/web_services/show_html.html.erb
+++ b/app/views/web_services/show_html.html.erb
@@ -1,5 +1,5 @@
 <% set_meta_tags :description => @article.preview,
-                 :canonical => official_government_long_url(request.fullpath),
+                 :canonical => ENV['OFFICIAL_GOVERNMENT_URL'] + request.fullpath,
                  :title => [@article.category.name, @article.title] %>
 <div class="page-container article">
   <div class="breadcrumbs">
@@ -22,8 +22,8 @@
             <div class="servicebox">
               <a href="<%= @article.service_url%>" target="_blank"><img src="/assets/getting_started_btn.png" /></a>
             </div>
-              <h3 class="service"><%= official_government_short_url %> lets you do this online! </h3>
-              <p>This will take you directly to the online service on the <%= official_government_short_url %> website.</p>
+              <h3 class="service"><%= ENV["OFFICIAL_GOVERNMENT_URL"] %> lets you do this online! </h3>
+              <p>This will take you directly to the online service on the <%= ENV["OFFICIAL_GOVERNMENT_URL"] %> website.</p>
           </div>
           <% end %>
 
