--- a/app/views/shared/_pagedown.html.erb
+++ b/app/views/shared/_pagedown.html.erb
@@ -1,7 +1,7 @@
 <%# encoding: utf-8 %>
 
 <!-- Allows the partial to be used for all form partials -->
-<% @article = @web_service || @quick_answer || @guide %>
+<% @article = @quick_answer %>
 
 
 <% @button_name = @article.class.to_s.split(/(?=[A-Z])/).join('_').downcase %>
