Mass amount of cleanup of outdated/empty files

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,64 +1,5 @@
-<% set_meta_tags description: ENV["OFFICIAL_SITE_TITLE"] + " is an experimental new approach designed to make it easier for people to find City information and services quickly." %>
 <div class="page-container about-page">
 	<div class="container">
-		<div class="row">
-			<div class="span9 main">
-				<div class="main-content">
-					<p><%= ENV["OFFICIAL_SITE_TITLE"] %> is an new approach to a City website, designed to make it easier for people to find City information and services quickly.</p>
-					<div class="title-spacing">
-					<h1>What It Is</h1>
-					<p><%= ENV["OFFICIAL_SITE_TITLE"] %> is a citizen-focused website that is question-driven, with clean, easy-to-navigate design. You can ask a question or type in keywords using plain language. You'll receive simple, friendly, concise, easy-to-understand responses, as though they're coming from a neighbor.</p>
-					<p><%= ENV["OFFICIAL_SITE_TITLE"] %> is based on the application built for Honolulu by 2012 Code for America fellows. Watch this <a href="https://vimeo.com/43632898#" target="_blank" class="highlight">short video</a> to learn more about Honolulu Answers.</p>
-					</div>
-
-					<div class="title-spacing">
-					<h1>The Design</h1>
-					<p>People begin most internet journeys with Search, so the site is designed with that in mind. At the same time, the most frequently viewed topics are bubbled up front, so most people can just click straight to their topic of interest. The content is organized based on citizen understanding, the intuitive way you'd think of a problem, not the way the City is organized internally.</p>
-					</div>
-
-					<div class="clearfix"></div>
-					<div class="title-spacing">
-							<!--
-					<div class="clearfix"></div>
-					<div class="title-spacing">
-							<h1>With a little help from our friends...</h1>
-							<p>
-							<a href="http://twitter.com/forestf" target="_blank"><div class="shoutout"><%= image_tag "forest.jpeg", :class => "biopic" %><em>Forest Frizzell</em></div></a> 
-							<a href="http://twitter.com/angelk" target="_blank"><div class="shoutout"><%= image_tag "angel.jpeg", :class => "biopic" %><em>Angel Kittiyachavalit</em></div></a>
-							<a href="http://twitter.com/robdotd" target="_blank"><div class="shoutout"><%= image_tag "rob.jpg", :class => "biopic" %><em>Rob Davis</em></div></a> 
-							<a href="http://twitter.com/dthompson" target="_blank"><div class="shoutout"><%= image_tag "mick.jpeg", :class => "biopic" %><em>Mick Thompson</em></div></a> 
-							<a href="http://twitter.com/dianavtran" target="_blank"><div class="shoutout"><%= image_tag "diana.jpeg", :class => "biopic" %><em>Diana Tran</em></div></a>
-							<a href="http://twitter.com/cydharrell" target="_blank"><div class="shoutout"><%= image_tag "cyd.jpeg", :class => "biopic" %><em>Cyd Harrell</em></div></a> 
-							<a href="http://twitter.com/mapmeld" target="_blank"><div class="shoutout"><%= image_tag "nick.jpeg", :class => "biopic" %><em>Nick Doiron</em></div></a> 
-							<a href="http://gov.uk/" target="_blank"><div class="shoutout"><%= image_tag "govuk.png", :class => "biopic" %><em>Gov.uk</em></div></a>
-							<a href="http://www.honolulu.gov" target="_blank"><div class="shoutout"><%= image_tag "hnl_gov.png", :class => "biopic" %><em>City &amp; County of Honolulu</em></div></a> 
-							<a href="http://codeforamerica.org/" target="_blank"><div class="shoutout"><%= image_tag "cfa.png", :class => "biopic" %><em>Code for America</em></div></a>
-							<a href="http://brigade.codeforamerica.org/" target="_blank"><div class="shoutout"><%= image_tag "brigade.png", :class => "biopic" %><em>CfA Honolulu Brigade</em></div></a>					
-				</p>
-				</div>
-				<br />
-			<div class="about-list"><p>Thanks to <a href="http://royalrealtyllc.com/">Royal Realty</a> for the background photo.</p></div>	
-
-							<div class="clearfix"></div>
-							<div class="title-spacing">
-							<h1>We'd love to hear from you</h1>
-							<p>Send us your ideas and feedback via email or tweet!
-								<ul>
-								<li>Want the website for your city?&nbsp;
-								<span class="comment">Email <a href="mailto:staff@codeforamerica.org">staff@codeforamerica.org</a>.</span></li>
-								<li>Are you a developer?&nbsp;
-								<span class="comment">Fork the app on <a href="https://github.com/honolulu/honolulu_answers" target="_blank">GitHub</a>.</span></li>
-								<li>Want to write answers for your city?&nbsp;
-								<span class="comment">Read our <a href="https://docs.google.com/a/codeforamerica.org/file/d/0B9kmre1G2wdIQmhJVFdZYzRkQXc/edit" target="_blank">Content Style Guide</a>.</span></li>
-								<li>Get your community involved in writing answers:&nbsp;
-								<span class="comment"><a href="http://neighborhow.org/guides/host-a-writeathon-in-your-city" target="_blank">Host a  write-a-thon</a>.</span></li>
-								<li>Follow us on Twitter:&nbsp;
-								<span class="comment"><a href="https://twitter.com/HonoluluAnswers" target="_blank">@HonoluluAnswers</a>.</span></li>
-								</ul>-->
-							</p>
-							</div>
-						</div>	
-					</div>	
-				</div>
-			</div>
-		</div>
+		Remember to put some text here!
+	</div>
+</div>
