Articles are now the only content object
No longer routing to quick answer, as there is no reason to use STI anymore

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
                 <ul class="category-articles">
                   <% category.articles.by_access_count.each do |article| %>
                     <% next unless article.published? %>
-                      <li class="category-article"><%= content_tag( :h3, link_to( article.title, article_path(article.id) ) ) %></li>
+                      <li class="category-article"><%= content_tag( :h3, link_to( article.title, article_path(article) ) ) %></li>
                   <% end -%>
                 </ul>
             </li>
