--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -13,7 +13,7 @@
               <% @results.each do |article| %>
                 <% next unless article.published? %>
                   <li class="article-listing">
-                    <%= content_tag( :h2, link_to( article.title, article_path(article.id) ) ) %>
+                    <%= content_tag( :h2, link_to( article.title, article_path(article) ) ) %>
                     <p class="preview"><%= article.preview %></p>
                       <div class="other-langs">
                           <% if article.title_es.present? %>
